--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -11,6 +11,8 @@ author_profile: true
 
 {% endif %}
 
+<p> Here you can find a selection of the talks that I have given.</p>
+
 {% for post in site.talks reversed %}
   {% include archive-single-talk.html %}
 {% endfor %}
