Change email address

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <img src="assets/icons/institute-icon.png" alt="Institute Icon" class="icon">SISSA, Trieste, Italy
                 </a>
                 <a href="mailto:cecilia.sgalletta@gmail.com" class="email">
-                    <img src="assets/icons/mail-icon.png" alt="MAIL Icon" class="icon">cecilia.sgalletta@gmail.com
+                    <img src="assets/icons/mail-icon.png" alt="MAIL Icon" class="icon">cecilia.sgalletta@sissa.it
                 </a>
                 <a href="https://orcid.org/0000-0001-5867-5033" class="orcid-link">
                     <img src="assets/icons/orcid-icon.png" alt="ORCID Icon" class="icon"> ORCID
