--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
-    <title>Personal Webpage</title>
+    <title>Cecilia Sgalletta</title>
     <link rel="stylesheet" href="css/styles.css">
+
+    <link rel="icon" href="assets/icons/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/icons/favicon.png" type="image/x-icon">
 
     <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 
