--- a/hobbies.html
+++ b/hobbies.html
@@ -6,6 +6,8 @@
     
     <title>Hobbies - Cecilia Sgalletta</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="assets/icons/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/icons/favicon.png" type="image/x-icon">
 
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet'>
