Update outreach page

--- a/outreach.html
+++ b/outreach.html
@@ -42,7 +42,10 @@
         <section class="research-section">
             <div class="text">
                 <h2>TriesteNEXT</h2>
-                <p>TriesteNEXT is an annual festival dedicated to fostering innovation, promoting scientific research, and encouraging public engagement with cutting-edge ideas. Held in the vibrant city of Trieste, the event brings together researchers, entrepreneurs, policymakers, and the general public to explore the latest advancements in science and technology through talks, exhibitions, workshops, and interactive activities.
+                <p>TriesteNEXT is an annual festival dedicated to fostering innovation, promoting scientific research, and 
+                    encouraging public engagement with cutting-edge ideas. Held in Trieste, the event brings 
+                    together researchers and the general public to explore the latest advancements 
+                    in science and technology through talks, exhibitions, workshops, and interactive activities.
                 </p>
             </div>
             <div class="image">
@@ -59,7 +62,8 @@
             </div>
             <div class="text">
                 <h2>Spring workshop of physics of data</h2>
-                <p>I had the privilege of discussing the computational challenges of my research on pulsar evolution with students in the Physics of Data program at the University of Padova, in the stunning setting of Venice.</p>
+                <p>I had the privilege of discussing the computational challenges of my pulsar evolution research with 
+                    Physics of Data students at the University of Padova, set in the beautiful surroundings of Venice.</p>
             </div>
         </section>
         </div> 
