--- a/outreach.html
+++ b/outreach.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
-    <title>Research - Cecilia Sgalletta</title>
+    <title>Outreach - Cecilia Sgalletta</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="assets/icons/favicon.png" type="image/x-icon">
     <link rel="shortcut icon" href="assets/icons/favicon.png" type="image/x-icon">
