Added presentations slides

--- a/research.html
+++ b/research.html
@@ -61,7 +61,7 @@
 
         <!-- Section 2 -->
         <div class="title-section">
-            <h2>Modeling the galactic binary neutron star population</h2>
+            <h2>Modeling the Galactic binary neutron star population</h2>
         <section class="research-section">
             <div class="image">
                 <img src="assets/images/research-bg.jpg" alt="Pulsars">
