--- a/talks.html
+++ b/talks.html
@@ -42,6 +42,11 @@
             <p><strong>Date:</strong> September 29, 2024</p>
             <p><strong>Event:</strong> Invited review talk, TUTT2024, Valona, Albania</p>
             <p>Invited review talk “Population models and rates” on what we already know about the population of gravitational wave sources and the present challenges in binary population synthesis codes.</p>
+            <a href="assets/docs/TUTT2024_presentation.pdf" class="cv-button" target="_blank">
+                <button class="btn">
+                    <img src="assets/icons/cv-icon.png" alt="CV Icon" class="icon">View slides
+                </button>
+            </a>
         </section>
         
         <section class="talk">
@@ -49,12 +54,22 @@
             <p><strong>Date:</strong> October 18, 2023</p>
             <p><strong>Event:</strong> Invited seminar, University of Padova, Padova, Italy</p>
             <p>Invited seminar on “Modeling the population of Galactic binary neutron stars” (about my work Sgalletta et al. 2023), focused on the pivotal role of binary neutron stars in modern astrophysics and their multimessenger nature.</p>
+            <a href="assets/docs/Unipd2023_presentation.pdf" class="cv-button" target="_blank">
+                <button class="btn">
+                    <img src="assets/icons/cv-icon.png" alt="CV Icon" class="icon">View slides
+                </button>
+            </a>
         </section>
         
         <section class="talk">
             <h2>Pulsars spin-up: a semi-analytical approach</h2>
             <p><strong>Date:</strong> April 06, 2022</p>
             <p><strong>Event:</strong> Invited talk, University of Padova, Venice, Italy</p>
+            <a href="assets/docs/pod2022_presentation.pdf" class="cv-button" target="_blank">
+                <button class="btn">
+                    <img src="assets/icons/cv-icon.png" alt="CV Icon" class="icon">View slides
+                </button>
+            </a>
         </section>
     </main>
 
